# carrot-ntfs-recovery

./: .gitignore  Cargo.toml  README.md
sample_images/: make_ntfs_image.sh
src/: main.rs  ntfs_logic.rs
