[package]
name = "carrot-ntfs-recovery"
version = "0.1.0"
edition = "2024"
description = "NTFS filesystem recovery/forensics tool"
authors = ["RecRanger"]

[dependencies]
memmap2 = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"

# CLI UX.
clap = { version = "4", features = ["derive"] }

# Logging.
log = "0.4"
env_logger = "0.11"

# Progress bar.
indicatif = "0.18.3"
